# ansible-role-sysctl

./: .pre-commit-config.yaml  .travis.yml  .yamllint.yml  README.md  pyproject.toml  requirements.yml  tasks.yml  tox.ini
.github/workflows/: molecule.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml  requirements.yml
molecule/default/: molecule.yml
molecule/kvm/: molecule.yml
molecule/podman/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
molecule/resources/tests/: test_default.py
molecule/tox/: molecule.yml
molecule/vbox/: molecule.yml
tasks/: main.yml
templates/etc/: sysctl.conf.j2
templates/etc/sysctl.d/: sysctl.d.conf.j2
vars/: main.yml
